Add automated upstream release tracking workflow
- Created GitHub Actions workflow to check for new Seerr releases daily
- Automatically updates beta branch and creates PRs with release notes
- Added beta branch for testing releases before stable promotion
- Updated snapcraft.yaml to use source-tag instead of source-branch
- Added WORKFLOW.md with detailed documentation
- Updated README with beta channel info and maintainer section

The workflow enables safe, semi-automated release management:
1. Auto-detect upstream releases
2. Build and publish to beta channel
3. Manual review and testing
4. Promote to stable on PR merge

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -52,7 +52,7 @@ parts:
     plugin: nil
     source: https://github.com/seerr-team/seerr.git
     source-type: git
-    source-branch: main
+    source-tag: v2.7.3
     
     build-snaps:
       - node/22/stable
